# MS51-SDCC-CMake

./: .gitmodules  CMakeLists.txt  FlashDevice.txt  LICENSE  README.md  cmake-kits.json  custom-compiler-sdcc-ms51.yaml  main.c
sdcc_compat/: MS51_8K.h  absacc.h  intrins.h  putchar.c
